--- a/client/styles/sign-up.css
+++ b/client/styles/sign-up.css
@@ -35,14 +35,8 @@ button{
 }
 
 .logo img {
-  max-height: 100px;
-}
-
-@media (max-width: 389px) {
-
-  .logo img {
-    height: 75px;
-  }
+  height: 50px;
+  width: auto;
 }
 
 /* Global Styles */
